# EcoScan

./: .gitignore  README.md  manage.py  pyproject.toml
EcoScan/: asgi.py  settings.py  urls.py  wsgi.py
caremi/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
caremi/migrations/: 0001_initial.py  0002_alter_useractivity_last_activity.py  0003_alter_useractivity_last_activity.py  0004_uploadedimage_emission_tokens.py  0005_voucher_uservoucher.py  0006_voucher_code.py
caremi/templates/caremi/: base.html  donate.html  employee_dashboard.html  home.html  login.html  newhome.html  user_dashboard.html  voucher_list.html
